--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
 }
 
-#intro .intro-content {
+#about .intro-content {
   position: absolute;
   bottom: 0;
   top: 0;
@@ -189,25 +189,25 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-#intro .intro-content h2 {
+#about .intro-content span {
   color: #0c2e8a;
   margin-bottom: 30px;
-  font-size: 64px;
+  font-size: 30px;
   font-weight: 700;
 }
 
-#intro .intro-content h2 span {
+#about .intro-content span span {
   color: #50d8af;
   text-decoration: underline;
 }
 
 @media (max-width: 767px) {
-  #intro .intro-content h2 {
+  #about .intro-content h2 {
     font-size: 34px;
   }
 }
 
-#intro .intro-content .btn-get-started, #intro .intro-content .btn-projects {
+#about .intro-content .btn-get-started, #intro .intro-content .btn-projects {
   font-family: "Raleway", sans-serif;
   font-size: 15px;
   font-weight: bold;
@@ -220,12 +220,12 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
-#intro .intro-content .btn-get-started {
+#about .intro-content .btn-get-started {
   background: #0c2e8a;
   border: 2px solid #0c2e8a;
 }
 
-#intro .intro-content .btn-get-started:hover {
+#about .intro-content .btn-get-started:hover {
   background: none;
   color: #0c2e8a;
 }
@@ -235,16 +235,16 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid #50d8af;
 }
 
-#intro .intro-content .btn-projects:hover {
+#about .intro-content .btn-projects:hover {
   background: none;
   color: #50d8af;
 }
 
-#intro #intro-carousel {
+#about #intro-carousel {
   z-index: 8;
 }
 
-#intro #intro-carousel::before {
+#about #intro-carousel::before {
   content: '';
   background-color: rgba(255, 255, 255, 0.7);
   position: absolute;
@@ -257,7 +257,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 7;
 }
 
-#intro #intro-carousel .item {
+#about #intro-carousel .item {
   width: 100%;
   height: 60vh;
   background-size: cover;
