--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1306,3 +1306,9 @@ section {
 #footer .credits a {
   color: #0c2e8a;
 }
+
+.tv-info-list h4 {
+  font-weight: bolder;
+  font-size: 16px;
+  color: #ff5a27;
+}
